--- a/DemoDCProject.UnitTests/DemoDCProject.UnitTests.csproj
+++ b/DemoDCProject.UnitTests/DemoDCProject.UnitTests.csproj
@@ -52,7 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="DemoDCProject.DomainLayer\Models\BillingAccountSummaryTests.cs" />
+    <Compile Include="DemoDCProject.DomainLayer\Managers\Gateways\Billing\Mappers\BillingAccountDetailMapperTests.cs" />
     <Compile Include="StaticAnalysis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Folder Include="DemoDCProject.DomainLayer\Managers\Factories\" />
     <Folder Include="DemoDCProject.DomainLayer\Managers\Helpers\" />
+    <Folder Include="DemoDCProject.DomainLayer\Models\" />
     <Folder Include="ForTest\" />
   </ItemGroup>
   <ItemGroup>
